2.app/5.create-ingress/1.backend/create-dns-ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: $INGRESS_NAME
  namespace: $NAMESPACE_NAME
  annotations:
   cert-manager.io/cluster-issuer: "letsencrypt-stage"
  #  kubernetes.io/ingress.class: traefik
  #  traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: stage-backend.your_domain.io
      http:
        paths:
        - path: /health
          pathType: Prefix
          backend:
            service:
              name: $SERVICE_NAME
              port:
                number: 8081
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: $SERVICE_NAME
              port:
                number: 8081
        - path: /readiness
          pathType: Prefix
          backend:
            service:
              name: $SERVICE_NAME
              port:
                number: 8081
  tls:
   - hosts:
       - stage-backend.your_domain.io
     secretName: your_domain.io-certificate-v1
